--- a/src/app/inicio/inicio.page.html
+++ b/src/app/inicio/inicio.page.html
@@ -1,17 +1,60 @@
-<!-- <ion-content [fullscreen]="true">
+
+<ion-content [fullscreen]="true" >
   <div id="container">
     <ion-header collapse="condense">
-      <ion-title size="large">inicio</ion-title>
+      <ion-searchbar placeholder="Buscar" ></ion-searchbar>
+
+
+        <ion-toolbar>
+          <ion-segment value="all">
+            <ion-segment-button value="all">
+              <ion-label>Todo</ion-label>
+            </ion-segment-button>
+            <ion-segment-button value="favorites">
+              <ion-label>Favoritos</ion-label>
+            </ion-segment-button>
+          </ion-segment>
+        </ion-toolbar>
+      
     </ion-header>
   </div>
-</ion-content> -->
+  <div *ngFor='let pais of paises' id="main">
+    <ion-card>
+      <ion-card-header>
+        <ion-card-title>{{pais.nombre}}</ion-card-title>
+      </ion-card-header>
+      <ion-card-content>
+        <img src="{{pais.bandera}}" alt="bandera" width="100%">
+      </ion-card-content>
+      <ion-button fill="clear" id="open-modal">Ver más</ion-button>
+      
+      <ion-modal
+        trigger="open-modal"
+        [initialBreakpoint]="0.25"
+        [breakpoints]="[0, 0.25, 0.5, 0.75]"
+        handleBehavior="cycle"
+      >
+        <ng-template>
+          <ion-content class="ion-padding">
+            <div class="ion-margin-top">
+              <ion-label>Nombre:  {{pais.nombre}}</ion-label> <br>
+              <ion-label>Capital: {{pais.capital}}</ion-label> <br>
+              <ion-label>Region: {{pais.region}}</ion-label>  <br>
+              <ion-label>Moneda: {{pais.moneda}}</ion-label>  <br>
+              <ion-label>Es independiente?: {{pais.esIndependiente}}</ion-label> <br>
+              <ion-label>Poblacion: {{pais.poblacion}}</ion-label> <br>
+              <ion-label>Idioma: {{pais.idioma}}</ion-label> <br>
+              <ion-label>Continente: {{pais.continente}}</ion-label> <br>
+              <ion-label>Mapa: {{pais.mapa}}</ion-label>
 
-<div *ngFor='let pais of paises'>
-  <label>nombre: {{pais.nombre}}</label>
-
-  <!-- Si el pais es independiente muestra "Independiente" y si no lo es muestra "Dependiente" -->
-   <div>
-    <p>pais: <b> {{pais.esIndependiente?'Independiente':'Dependiente'}} </b> </p>
-    <img src="{{pais.bandera}}" alt="bandera">
+            </div>
+          </ion-content>
+        </ng-template>
+      </ion-modal>
+      
+      
+    </ion-card>
   </div>
-</div>
+</ion-content>
+
+
